# hardware_sampling

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  annotated.html  classes.html  classhws_1_1cpu__clock__samples-members.html  classhws_1_1cpu__clock__samples.html  classhws_1_1cpu__general__samples-members.html  classhws_1_1cpu__general__samples.html  classhws_1_1cpu__gfx__samples-members.html  classhws_1_1cpu__gfx__samples.html  classhws_1_1cpu__hardware__sampler-members.html  classhws_1_1cpu__hardware__sampler.html  classhws_1_1cpu__hardware__sampler__coll__graph.map  classhws_1_1cpu__hardware__sampler__coll__graph.md5  classhws_1_1cpu__hardware__sampler__inherit__graph.map  classhws_1_1cpu__hardware__sampler__inherit__graph.md5  classhws_1_1cpu__idle__states__samples-members.html  classhws_1_1cpu__idle__states__samples.html  classhws_1_1cpu__memory__samples-members.html  classhws_1_1cpu__memory__samples.html  classhws_1_1cpu__power__samples-members.html  classhws_1_1cpu__power__samples.html  classhws_1_1cpu__temperature__samples-members.html  classhws_1_1cpu__temperature__samples.html  classhws_1_1detail_1_1level__zero__device__handle-members.html  classhws_1_1detail_1_1level__zero__device__handle.html  classhws_1_1detail_1_1nvml__device__handle-members.html  classhws_1_1detail_1_1nvml__device__handle.html  classhws_1_1gpu__amd__hardware__sampler-members.html  classhws_1_1gpu__amd__hardware__sampler.html  classhws_1_1gpu__amd__hardware__sampler__coll__graph.map  classhws_1_1gpu__amd__hardware__sampler__coll__graph.md5  classhws_1_1gpu__amd__hardware__sampler__inherit__graph.map  classhws_1_1gpu__amd__hardware__sampler__inherit__graph.md5  classhws_1_1gpu__intel__hardware__sampler-members.html  (+240 more)
.github/workflows/: documentation.yml
bindings/: CMakeLists.txt  __init__.py  cpu_hardware_sampler.cpp  event.cpp  events.cpp  gpu_amd_hardware_sampler.cpp  gpu_intel_hardware_sampler.cpp  gpu_nvidia_hardware_sampler.cpp  hardware_sampler.cpp  main.cpp  relative_event.cpp  relative_event.hpp  sample_category.cpp  system_hardware_sampler.cpp  version.cpp
cmake/: Findlevel_zero.cmake  hardware_samplingConfig.cmake.in  hwsConfig.cmake.in
docs/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  main.cpp
examples/python/: main.py
include/hardware_sampling/: core.hpp  event.hpp  events.hpp  hardware_sampler.hpp  sample_category.hpp  system_hardware_sampler.hpp  utility.hpp  version.hpp.in
include/hardware_sampling/cpu/: cpu_samples.hpp  hardware_sampler.hpp  utility.hpp
include/hardware_sampling/gpu_amd/: hardware_sampler.hpp  rocm_smi_samples.hpp  utility.hpp
include/hardware_sampling/gpu_intel/: hardware_sampler.hpp  level_zero_device_handle.hpp  level_zero_device_handle_impl.hpp  level_zero_samples.hpp  utility.hpp
include/hardware_sampling/gpu_nvidia/: hardware_sampler.hpp  nvml_device_handle.hpp  nvml_device_handle_impl.hpp  nvml_samples.hpp  utility.hpp
include/hws/: core.hpp  event.hpp  hardware_sampler.hpp  sample_category.hpp  system_hardware_sampler.hpp  utility.hpp  version.hpp.in
include/hws/cpu/: cpu_samples.hpp  hardware_sampler.hpp  utility.hpp
include/hws/gpu_amd/: hardware_sampler.hpp  rocm_smi_samples.hpp  utility.hpp
include/hws/gpu_intel/: hardware_sampler.hpp  level_zero_device_handle.hpp  level_zero_device_handle_impl.hpp  level_zero_samples.hpp  utility.hpp
include/hws/gpu_nvidia/: hardware_sampler.hpp  nvml_device_handle.hpp  nvml_device_handle_impl.hpp  nvml_samples.hpp  utility.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  (+46 more)
src/hardware_sampling/: event.cpp  events.cpp  hardware_sampler.cpp  system_hardware_sampler.cpp  utility.cpp
src/hardware_sampling/cpu/: cpu_samples.cpp  hardware_sampler.cpp  utility.cpp
src/hardware_sampling/gpu_amd/: hardware_sampler.cpp  rocm_smi_samples.cpp  utility.cpp
src/hardware_sampling/gpu_intel/: hardware_sampler.cpp  level_zero_samples.cpp  utility.cpp
src/hardware_sampling/gpu_nvidia/: hardware_sampler.cpp  nvml_samples.cpp  utility.cpp
src/hws/: event.cpp  hardware_sampler.cpp  system_hardware_sampler.cpp  utility.cpp
src/hws/cpu/: CMakeLists.txt  cpu_samples.cpp  hardware_sampler.cpp  utility.cpp
src/hws/gpu_amd/: CMakeLists.txt  hardware_sampler.cpp  rocm_smi_samples.cpp  utility.cpp
src/hws/gpu_intel/: CMakeLists.txt  hardware_sampler.cpp  level_zero_samples.cpp  utility.cpp
src/hws/gpu_nvidia/: CMakeLists.txt  hardware_sampler.cpp  nvml_samples.cpp  utility.cpp
